# PhysicsTool

./: CMakeLists.txt  Kinematics.cpp  Kinematics.h  README.md  RealTimeSimulator.cpp  RealTimeSimulator.h  main.cpp  sensor_signal.cpp  sensor_signal.h
windows/: frefall_window.cpp  frefall_window.h  signal_simulator_window.cpp  signal_simulator_window.h
